# src/dto/auth/auth-refresh.dto.ts
@@ -1,0 +1,7 @@
+import * as yup from "yup";
+
+export const authRefreshSchema = yup.object({
+  refreshToken: yup.string().optional(),
+});
+
+export type AuthRefreshDto = yup.InferType<typeof authRefreshSchema>;
